--- a/MERN-Project/package.json
+++ b/MERN-Project/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.1",
+    "mongoose-sequence": "^6.0.1",
     "nodemon": "^3.1.10",
     "path": "^0.12.7",
     "uuid": "^11.1.0"
