--- a/MERN-Project/package.json
+++ b/MERN-Project/package.json
@@ -10,11 +10,13 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.15.1",
     "mongoose-sequence": "^6.0.1",
